--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Great Ogheneochuko",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
